# IAtomas

./: AtomDrawing.md  Cargo.toml  README.md  Raw.txt  Raw2.txt  estimate.py
src/: main.rs
src/game/: atoms_data.rs  mod.rs  state.rs
