[package]
name = "iatomas"
version = "0.1.0"
authors = ["Rayerdyne <francois.straet@gmail.som>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk-rs.git"
features = ["v3_16"]

[dependencies.gdk]
git = "https://github.com/gtk-rs/gtk-rs.git"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs.git"
